--- a/index.ipynb
+++ b/index.ipynb
@@ -52,7 +52,7 @@
     "- Set the `font-size` to `22px` for the element with `id` `main-header`\n",
     "- Set the `font-style` to `italic` for elements containing the class `perspective-questions`\n",
     "\n",
-    "# Code Along Instructions\n",
+    "## Code Along Instructions\n",
     "\n",
     "Open the [Pen][] in a separate browswer tab to follow the code along instructions.\n",
     "\n",
@@ -114,7 +114,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
