updating directions and saving images locally

--- a/index.ipynb
+++ b/index.ipynb
@@ -12,7 +12,7 @@
    "metadata": {},
    "source": [
     "## Introduction\n",
-    "It's time to see some CSS code in action. [Codepen][] is a great tool to easily test HTML and CSS code and it's what we will use for our example."
+    "It's time to see some CSS code in action. [Codepen][] is a great tool to easily test HTML and CSS code that you'll see in practice here."
    ]
   },
   {
@@ -33,7 +33,7 @@
     "\n",
     "This [Pen][] (saved [Codepen][] document) contains an HTML document with the following structure:\n",
     "\n",
-    "- a [`<body>`][] element (root of the html content. In [Codepen][] we will not see a body tag, it's implicitly present and wraps all the HTML content)\n",
+    "- a [`<body>`][] element (root of the html content. In [Codepen][] you will not see a body tag, it's implicitly present and wraps all the HTML content)\n",
     "- an [`<article>`][] tag to define our content as self-contained unit (e.g. blog post, newspaper article)\n",
     "- an [`<h1>`][h tags] tag to wrap the [`<article>`]'s header text\n",
     "- [`<p>`][] tags to wrap the [`<article>`]'s unstructured text\n",
@@ -58,35 +58,24 @@
     "\n",
     "## Pen Screenshot\n",
     "\n",
-    "![][Pen homepage]\n",
+    "<img src=\"images/codepen.jpeg\">\n",
     "\n",
     "## Unstyled HTML Document Screenshot\n",
     "\n",
-    "![][Unstyled page]\n",
+    "<img src=\"images/unstyled-codepen.jpeg\">\n",
     "\n",
     "## Styled HTML Document Screenshot\n",
     "\n",
-    "![][Styled page]\n",
+    "<img src=\"images/styled-codepen.jpeg\" width=1050>\n",
     "\n",
     "All the CSS code you need to successfully modify the page is already included but commented out. All you need to do is uncomment all the `CSS declarations` (`property-name`:`value`) one by one.\n",
     "\n",
     "## CSS Declarations Uncommenting Steps\n",
     "\n",
-    "![][Uncomment instructions]   \n",
-    "\n",
+    "<img src=\"images/css-code-codepen.jpg\" width=1050>\n",
     "\n",
     "[Codepen]: https://codepen.io/\n",
-    "[Pen]: https://codepen.io/curiositypaths/pen/WddzQM?editors=1100\n",
-    "[Pen homepage]: https://curriculum-content.s3.amazonaws.com/web-development/codepen.jpeg\n",
-    "[Unstyled page]: https://curriculum-content.s3.amazonaws.com/web-development/unstyled-codepen.jpeg\n",
-    "[Styled page]: https://curriculum-content.s3.amazonaws.com/web-development/styled-codepen.jpeg\n",
-    "[Uncomment instructions]: https://curriculum-content.s3.amazonaws.com/web-development/css-code-codepen.jpg\n",
-    "[`<body>`]: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/body\n",
-    "[`<article>`]: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/article\n",
-    "[h tags]: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/Heading_Elements\n",
-    "[`<p>`]: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/p\n",
-    "[`<ul>`]: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/ul\n",
-    "[`<li>`]: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/li"
+    "[Pen]: https://codepen.io/curiositypaths/pen/WddzQM?editors=1100"
    ]
   },
   {
@@ -114,7 +103,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
