fixing spelling error

--- a/index.ipynb
+++ b/index.ipynb
@@ -54,7 +54,7 @@
     "\n",
     "## Code Along Instructions\n",
     "\n",
-    "Open the [Pen][] in a separate browswer tab to follow the code along instructions.\n",
+    "Open the [Pen][] in a separate broswer tab to follow the code along instructions.\n",
     "\n",
     "## Pen Screenshot\n",
     "\n",
