fix readme master

--- a/index.ipynb
+++ b/index.ipynb
@@ -4,31 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# CSS Code Along"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "# CSS Code Along\n",
+    "\n",
     "## Introduction\n",
-    "It's time to see some CSS code in action. [Codepen][] is a great tool to easily test HTML and CSS code that you'll see in practice here."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "It's time to see some CSS code in action. [Codepen][] is a great tool to easily test HTML and CSS code that you'll see in practice here.\n",
+    "\n",
     "## Objectives\n",
     "You will be able to:\n",
     "* Use Codepen to preview and modify HTML and CSS files\n",
-    "* Uncomment CSS code"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "* Uncomment CSS code\n",
+    "\n",
     "## Code Example HTML Structure\n",
     "\n",
     "This [Pen][] (saved [Codepen][] document) contains an HTML document with the following structure:\n",
@@ -66,7 +51,7 @@
     "\n",
     "## Styled HTML Document Screenshot\n",
     "\n",
-    "<img src=\"images/styled-codepen.jpeg\" width=1050>\n",
+    "<img src=\"images/styled-codepen.jpeg\" width=\"1050\">\n",
     "\n",
     "All the CSS code you need to successfully modify the page is already included but commented out. All you need to do is uncomment all the `CSS declarations` (`property-name`:`value`) one by one.\n",
     "\n",
@@ -75,13 +60,8 @@
     "<img src=\"images/css-code-codepen.jpg\" width=1050>\n",
     "\n",
     "[Codepen]: https://codepen.io/\n",
-    "[Pen]: https://codepen.io/curiositypaths/pen/WddzQM?editors=1100"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "[Pen]: https://codepen.io/curiositypaths/pen/WddzQM?editors=1100\n",
+    "\n",
     "## Summary\n",
     "Awesome! In this code along you got to preview and practice a standard web development environment and modify CSS code!"
    ]
@@ -103,7 +83,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
