update learning objectives, summary, fix broken links

--- a/index.ipynb
+++ b/index.ipynb
@@ -12,15 +12,15 @@
     "## Objectives\n",
     "You will be able to:\n",
     "* Use Codepen to preview and modify HTML and CSS files\n",
-    "* Uncomment CSS code\n",
+    "* Comment and uncomment CSS and HTML\n",
     "\n",
     "## Code Example HTML Structure\n",
     "\n",
     "This [Pen][] (saved [Codepen][] document) contains an HTML document with the following structure:\n",
     "\n",
-    "- a [`<body>`][] element (root of the html content. In [Codepen][] you will not see a body tag, it's implicitly present and wraps all the HTML content)\n",
-    "- an [`<article>`][] tag to define our content as self-contained unit (e.g. blog post, newspaper article)\n",
-    "- an [`<h1>`][h tags] tag to wrap the [`<article>`]'s header text\n",
+    "- A [`<body>`][] element (root of the html content. In [Codepen][] you will not see a body tag, it's implicitly present and wraps all the HTML content)\n",
+    "- An [`<article>`][] tag to define our content as self-contained unit (e.g. blog post, newspaper article)\n",
+    "- An [`<h1>`][] tag to wrap the [`<article>`]'s header text\n",
     "- [`<p>`][] tags to wrap the [`<article>`]'s unstructured text\n",
     "- [`<ul>`][] tags to represent unordered lists\n",
     "- [`<li>`][] tags to wrap each list item\n",
@@ -33,7 +33,7 @@
     "- Centers the [`<article>`] element\n",
     "- Sets the font family of the [`<article>`] element to `Helvetica Neue`. Alternative fonts are provided in the event `Helvetica Neue` is not available on your computer\n",
     "- Set the background of the [`<article>`] element to `white`\n",
-    "- Add 30px of white space to perimeter of the [`<article>`]\n",
+    "- Add 30px of white space to the perimeter of the [`<article>`]\n",
     "- Set the `font-size` to `22px` for the element with `id` `main-header`\n",
     "- Set the `font-style` to `italic` for elements containing the class `perspective-questions`\n",
     "\n",
@@ -53,7 +53,7 @@
     "\n",
     "<img src=\"images/styled-codepen.jpeg\" width=\"1050\">\n",
     "\n",
-    "All the CSS code you need to successfully modify the page is already included but commented out. All you need to do is uncomment all the `CSS declarations` (`property-name`:`value`) one by one.\n",
+    "All the CSS code you need to successfully modify the page is already included but commented out. All you need to do is uncomment all the `CSS declarations` (`property-name`:`value`) one-by-one.\n",
     "\n",
     "## CSS Declarations Uncommenting Steps\n",
     "\n",
@@ -61,9 +61,15 @@
     "\n",
     "[Codepen]: https://codepen.io/\n",
     "[Pen]: https://codepen.io/curiositypaths/pen/WddzQM?editors=1100\n",
+    "[`<body>`]: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/body\n",
+    "[`<article>`]: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/article\n",
+    "[`<h1>`]: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/Heading_Elements\n",
+    "[`<p>`]: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/p\n",
+    "[`<ul>`]: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/ul\n",
+    "[`<li>`]: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/li\n",
     "\n",
     "## Summary\n",
-    "Awesome! In this code along you got to preview and practice a standard web development environment and modify CSS code!"
+    "Awesome! In this code along you got to preview and practice a standard web development environment and modify CSS code! Specifically, you used Codepen to modify HTML and CSS files. You also learned how commenting/uncommenting works in CSS and HTML!"
    ]
   }
  ],
