--- a/index.ipynb
+++ b/index.ipynb
@@ -7,34 +7,37 @@
     "# CSS Code Along\n",
     "\n",
     "## Introduction\n",
+    "\n",
     "It's time to see some CSS code in action. [Codepen][] is a great tool to easily test HTML and CSS code that you'll see in practice here.\n",
     "\n",
     "## Objectives\n",
+    "\n",
     "You will be able to:  \n",
     "\n",
-    "* Use Codepen to preview and modify HTML and CSS files  \n",
-    "* Comment and uncomment CSS and HTML\n",
+    "- Use Codepen to preview and modify HTML and CSS files  \n",
+    "- Comment and uncomment CSS and HTML\n",
     "\n",
     "## Code Example HTML Structure\n",
     "\n",
-    "This [Pen][] (saved [Codepen][] document) contains an HTML document with the following structure:\n",
+    "This [Pen][] (saved Codepen document) contains an HTML document with the following structure:\n",
     "\n",
-    "- A [`<body>`][] element (root of the html content. In [Codepen][] you will not see a body tag, it's implicitly present and wraps all the HTML content)\n",
+    "- A [`<body>`][] element (root of the html content. In Codepen you will not see a body tag, it's implicitly present and wraps all the HTML content)\n",
     "- An [`<article>`][] tag to define our content as self-contained unit (e.g. blog post, newspaper article)\n",
-    "- An [`<h1>`][] tag to wrap the [`<article>`]'s header text\n",
-    "- [`<p>`][] tags to wrap the [`<article>`]'s unstructured text\n",
+    "- An [`<h1>`][] tag to wrap the `<article>`'s header text\n",
+    "- [`<p>`][] tags to wrap the `<article>`'s unstructured text\n",
     "- [`<ul>`][] tags to represent unordered lists\n",
     "- [`<li>`][] tags to wrap each list item\n",
     "\n",
     "## Code Example CSS Structure\n",
     "\n",
-    "The [Pen][] also includes commented out CSS Code to (`/* this is a CSS comment */`):\n",
-    "- Set the background of the [`<body>`] element (whole document) to `#00b3e6` (light blue)\n",
-    "- Sets the [`<article>`] element width to `700px`\n",
-    "- Centers the [`<article>`] element\n",
-    "- Sets the font family of the [`<article>`] element to `Helvetica Neue`. Alternative fonts are provided in the event `Helvetica Neue` is not available on your computer\n",
-    "- Set the background of the [`<article>`] element to `white`\n",
-    "- Add 30px of white space to the perimeter of the [`<article>`]\n",
+    "The [Pen][] also includes commented-out CSS Code to:\n",
+    "\n",
+    "- Set the background of the `<body>` element (whole document) to `#00b3e6` (light blue)\n",
+    "- Sets the `<article>` element width to `700px`\n",
+    "- Centers the `<article>` element\n",
+    "- Sets the font family of the `<article>` element to `Helvetica Neue`. Alternative fonts are provided in the event `Helvetica Neue` is not available on your computer\n",
+    "- Set the background of the `<article>` element to `white`\n",
+    "- Add 30px of white space to the perimeter of the `<article>`\n",
     "- Set the `font-size` to `22px` for the element with `id` `main-header`\n",
     "- Set the `font-style` to `italic` for elements containing the class `perspective-questions`\n",
     "\n",
@@ -70,6 +73,7 @@
     "[`<li>`]: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/li\n",
     "\n",
     "## Summary\n",
+    "\n",
     "Awesome! In this code along you got to preview and practice a standard web development environment and modify CSS code! Specifically, you used Codepen to modify HTML and CSS files. You also learned how commenting/uncommenting works in CSS and HTML!"
    ]
   }
