Notebook updated by fis-canvas image script

--- a/index.ipynb
+++ b/index.ipynb
@@ -49,19 +49,19 @@
     "\n",
     "## Pen Screenshot\n",
     "\n",
-    "<img src=\"images/codepen.jpeg\">\n",
+    "<img src=\"https://curriculum-content.s3.amazonaws.com/data-science/images/codepen.jpeg\">\n",
     "\n",
     "## Unstyled HTML Document Screenshot\n",
     "\n",
-    "<img src=\"images/unstyled-codepen.jpeg\">\n",
+    "<img src=\"https://curriculum-content.s3.amazonaws.com/data-science/images/unstyled-codepen.jpeg\">\n",
     "\n",
     "## Styled HTML Document Screenshot\n",
     "\n",
-    "<img src=\"images/styled-codepen.jpeg\" width=\"1050\">\n",
+    "<img src=\"https://curriculum-content.s3.amazonaws.com/data-science/images/styled-codepen.jpeg\" width=\"1050\">\n",
     "\n",
     "## CSS Declarations Uncommenting Steps\n",
     "\n",
-    "<img src=\"images/css-code-codepen.jpg\" width=1050>\n",
+    "<img src=\"https://curriculum-content.s3.amazonaws.com/data-science/images/css-code-codepen.jpg\" width=1050>\n",
     "\n",
     "[Codepen]: https://codepen.io/\n",
     "[Pen]: https://codepen.io/curiositypaths/pen/WddzQM?editors=1100\n",
